L3/S6/HAI601I - Analyse syntaxique/8/y.output
Grammaire

    0 $accept: liste $end

    1 liste: %empty
    2      | liste ligne

    3 ligne: '\n'
    4      | expr '\n'

    5 expr: '(' expr ')'
    6     | expr expr
    7     | expr '|' expr
    8     | expr '*'
    9     | SYMBOLE


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '\n' (10) 3 4
    '(' (40) 5
    ')' (41) 5
    '*' (42) 8
    '|' (124) 7
    error (256)
    SYMBOLE <c> (258) 9
    CONCAT (259)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (10)
        à gauche: 0
    liste (11)
        à gauche: 1 2
        à droite: 0 2
    ligne (12)
        à gauche: 3 4
        à droite: 2
    expr <a> (13)
        à gauche: 5 6 7 8 9
        à droite: 4 5 6 7 8


État 0

    0 $accept: . liste $end

    $défaut  réduction par utilisation de la règle 1 (liste)

    liste  aller à l'état 1


État 1

    0 $accept: liste . $end
    2 liste: liste . ligne

    $end     décalage et aller à l'état 2
    SYMBOLE  décalage et aller à l'état 3
    '('      décalage et aller à l'état 4
    '\n'     décalage et aller à l'état 5

    ligne  aller à l'état 6
    expr   aller à l'état 7


État 2

    0 $accept: liste $end .

    $défaut  accepter


État 3

    9 expr: SYMBOLE .

    $défaut  réduction par utilisation de la règle 9 (expr)


État 4

    5 expr: '(' . expr ')'

    SYMBOLE  décalage et aller à l'état 3
    '('      décalage et aller à l'état 4

    expr  aller à l'état 8


État 5

    3 ligne: '\n' .

    $défaut  réduction par utilisation de la règle 3 (ligne)


État 6

    2 liste: liste ligne .

    $défaut  réduction par utilisation de la règle 2 (liste)


État 7

    4 ligne: expr . '\n'
    6 expr: expr . expr
    7     | expr . '|' expr
    8     | expr . '*'

    SYMBOLE  décalage et aller à l'état 3
    '|'      décalage et aller à l'état 9
    '('      décalage et aller à l'état 4
    '*'      décalage et aller à l'état 10
    '\n'     décalage et aller à l'état 11

    expr  aller à l'état 12


État 8

    5 expr: '(' expr . ')'
    6     | expr . expr
    7     | expr . '|' expr
    8     | expr . '*'

    SYMBOLE  décalage et aller à l'état 3
    '|'      décalage et aller à l'état 9
    '('      décalage et aller à l'état 4
    '*'      décalage et aller à l'état 10
    ')'      décalage et aller à l'état 13

    expr  aller à l'état 12


État 9

    7 expr: expr '|' . expr

    SYMBOLE  décalage et aller à l'état 3
    '('      décalage et aller à l'état 4

    expr  aller à l'état 14


État 10

    8 expr: expr '*' .

    $défaut  réduction par utilisation de la règle 8 (expr)


État 11

    4 ligne: expr '\n' .

    $défaut  réduction par utilisation de la règle 4 (ligne)


État 12

    6 expr: expr . expr
    6     | expr expr .
    7     | expr . '|' expr
    8     | expr . '*'

    '*'  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 6 (expr)

    expr  aller à l'état 12


État 13

    5 expr: '(' expr ')' .

    $défaut  réduction par utilisation de la règle 5 (expr)


État 14

    6 expr: expr . expr
    7     | expr . '|' expr
    7     | expr '|' expr .
    8     | expr . '*'

    SYMBOLE  décalage et aller à l'état 3
    '('      décalage et aller à l'état 4
    '*'      décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 7 (expr)

    expr  aller à l'état 12
